test/fail/erased1.ma
-- invalid use of erased data

let id : (A : Set) -> [A] -> A
       = \ A -> \ x -> x

